# Akili

./: .dockerignore  .env.example  .firebaserc  .gitattributes  .gitignore  Dockerfile  FRONTEND_SECURITY_REVIEW.md  README.md  SECURITY_REVIEW.md  akili.db  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  deploy.yml
akili-workspace/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
akili-workspace/components/: DocumentViewer.tsx  Header.tsx  SidebarRight.tsx
benchmark/: dataset.json  run_benchmark.py
docs/: ARCHITECTURE.md  AUDIT.md  CI-CD-SECURITY-REVIEW.md  DD-REMEDIATION-PLAN.md  DEPLOYMENT.md  INGEST-FLOW.md  LANDING-PAGE-BRIEF.md  STORE-SECURITY-REVIEW.md  TECHNICAL-EXECUTION-PLAN.md  UI-SPEC.md  UX-DESIGN-BRIEF.md  hackster-writeup.md
frontend/: Dockerfile  Dockerfile.prod  README.md  cloudbuild-frontend.yaml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: landing.html
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  firebase.ts  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: BenchmarkTable.tsx  CompareView.tsx  DocumentViewer.tsx  FileUploader.test.tsx  FileUploader.tsx  Header.test.tsx  Header.tsx  IngestSummary.tsx  LandingPage.tsx  LoginPage.tsx  Onboarding.tsx  ReviewPanel.tsx  ShareButton.tsx  SidebarLeft.test.tsx  SidebarLeft.tsx  SidebarRight.tsx  Toast.tsx  UsageLimitModal.tsx  benchmarkData.ts
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useOnboarding.ts  useOnboardingMetrics.ts  useReveal.ts
frontend/src/pages/: SharedAnswer.tsx
frontend/src/test/: integration.test.tsx  setup.ts
scripts/: deploy-gcp.sh  populate_corpus.py  test-api.ps1
src/akili/: __init__.py  config.py
src/akili/api/: __init__.py  app.py  auth.py  deps.py  serve.py
src/akili/canonical/: __init__.py  models.py
src/akili/corpus/: __init__.py  loader.py
src/akili/ingest/: __init__.py  canonicalize.py  consensus.py  errors.py  extract_schema.py  gemini_extract.py  gemini_format.py  multipage.py  page_classifier.py  pdf_loader.py  pipeline.py
src/akili/learn/: __init__.py  pattern_analyzer.py
src/akili/store/: __init__.py  base.py  connection.py  corrections.py  migrate.py  postgres.py  repository.py  usage.py
src/akili/verify/: __init__.py  compare.py  derived.py  intent.py  matchers.py  models.py  (+2 more)
tests/: __init__.py  conftest.py  test_api.py  test_audit.py  test_canonical.py  test_canonical_extended.py  test_chat.py  test_compare.py  test_confidence.py  test_consensus.py  test_corrections.py  test_derived.py  test_extraction.py  test_intent.py  test_multipage.py  test_pattern_analyzer.py  test_pipeline_integration.py  test_projects.py  test_security.py  test_store.py  test_verify.py  test_z3_checks.py
tests/benchmark/: ground_truth.json  run_benchmark.py  test_benchmark.py
tests/integration/: conftest.py  test_gemini_live.py
(+13 files in other folders)
