[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akili"
version = "0.1.0"
description = "The Reasoning Control Plane for Mission-Critical Engineering — deterministic verification for technical documentation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Akili" }]
keywords = ["verification", "documentation", "gemini", "coordinate-grounding", "deterministic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "python-multipart>=0.0.6",
    "google-generativeai>=0.3",
    "pymupdf>=1.23",
    "pdf2image>=1.16",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff"]
auth = ["firebase-admin>=6.0"]
verify = ["z3-solver>=4.12"]

[project.scripts]
akili-serve = "akili.api.serve:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
